--- a/les/catalog/catalog.html
+++ b/les/catalog/catalog.html
@@ -10,9 +10,9 @@
 
 <body>
     <div class="menu">
-        <a href="/les/index.html">Главная</a>
-        <a href="./catalog.html">Каталог</a>
-        <a href="#">Контакты</a>
+        <a class="menu_link" href="/les/index.html">Главная</a>
+        <a class="menu_link" href="./catalog.html">Каталог</a>
+        <a class="menu_link" href="#">Контакты</a>
 
         <section class="content">
             <h1 class="h1_tit">Каталог</h1>
